--- a/package.json
+++ b/package.json
@@ -5,10 +5,6 @@
   "scripts": {
     "start": "./node_modules/.bin/babel-node --presets react,es2015 server.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/rgrjs/rgrjs.com.git"
-  },
   "author": "",
   "license": "ISC",
   "bugs": {
@@ -22,7 +18,12 @@
     "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
+    "events": "^1.1.0",
     "express": "^4.13.3",
+    "flux": "^2.1.1",
+    "jquery": "^2.2.0",
+    "kerberos": "0.0.17",
+    "mongodb": "^2.1.4",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
     "webpack": "^1.12.9"
